[project]
name = "vibemoney-backend"
version = "0.1.0"
description = "FastAPI service for stock data (scaffold)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "browser-use-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.uvicorn]
factory = true
app = "app.main:create_app"


